--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "socketcluster-client",
   "description": "Client side of SocketCluster",
-  "version": "0.9.18",
+  "version": "0.9.19",
   "homepage": "https://github.com/topcloud/socketcluster-client",
   "contributors": [
     {
@@ -9,6 +9,10 @@
       "email": "grosjona@yahoo.com.au"
     }
   ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/topcloud/socketcluster-client.git"
+  },
   "dependencies": {
     "engine.io-client": "1.3.1",
     "emitter": "http://github.com/component/emitter/archive/1.0.1.tar.gz"
