--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "socketcluster-client",
   "description": "Client side of SocketCluster",
-  "version": "0.9.33",
-  "homepage": "https://github.com/topcloud/socketcluster-client",
+  "version": "0.9.34",
+  "homepage": "http://socketcluster.io",
   "contributors": [
     {
       "name": "Jonathan Gros-Dubois",
