--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "url": "git://github.com/topcloud/socketcluster-client.git"
   },
   "dependencies": {
-    "engine.io-client": "1.4.3",
-    "emitter": "http://github.com/component/emitter/archive/1.0.1.tar.gz"
+    "emitter": "http://github.com/component/emitter/archive/1.0.1.tar.gz",
+    "ws": "0.7.1"
   },
   "readmeFilename": "README.md"
 }
