--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "emitter": "http://github.com/component/emitter/archive/1.0.1.tar.gz",
+    "linked-list": "0.1.0",
     "ws": "0.7.1"
   },
   "readmeFilename": "README.md"
