--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   },
   "dependencies": {
     "engine.io-client": "1.4.3",
-    "emitter": "http://github.com/component/emitter/archive/1.0.1.tar.gz"
+    "emitter": "http://github.com/component/emitter/archive/1.0.1.tar.gz",
+    "expirymanager": "0.9.x",
+    "linked-list": "0.1.0",
+    "node-uuid": "1.4.3"
   },
   "readmeFilename": "README.md"
 }
