--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "socketcluster-client",
+  "name": "sc1-client",
   "description": "Client side of SocketCluster",
   "version": "1.3.12",
   "homepage": "http://socketcluster.io",
