--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "socketcluster-client",
   "description": "SocketCluster JavaScript client",
-  "version": "2.2.9",
+  "version": "2.2.11",
   "homepage": "http://socketcluster.io",
   "contributors": [
     {
@@ -14,7 +14,7 @@
     "url": "git://github.com/topcloud/socketcluster-client.git"
   },
   "dependencies": {
-    "emitter": "http://github.com/component/emitter/archive/1.0.1.tar.gz",
+    "component-emitter": "1.2.0",
     "linked-list": "0.1.0",
     "ws": "0.7.1"
   },
