--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sc1-client",
   "description": "Client side of SocketCluster",
-  "version": "1.3.12",
+  "version": "1.3.13",
   "homepage": "http://socketcluster.io",
   "contributors": [
     {
@@ -14,7 +14,7 @@
     "url": "git://github.com/topcloud/socketcluster-client.git"
   },
   "dependencies": {
-    "emitter": "http://github.com/component/emitter/archive/1.0.1.tar.gz",
+    "component-emitter": "1.2.0",
     "engine.io-client": "1.4.3",
     "linked-list": "0.1.0"
   },
