--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "socketcluster-client",
   "description": "SocketCluster JavaScript client",
-  "version": "2.2.23",
+  "version": "2.2.25",
   "homepage": "http://socketcluster.io",
   "contributors": [
     {
@@ -14,8 +14,8 @@
     "url": "git://github.com/SocketCluster/socketcluster-client.git"
   },
   "dependencies": {
-    "component-emitter": "1.2.0",
     "linked-list": "0.1.0",
+    "sc-emitter": "1.0.x",
     "ws": "0.7.1"
   },
   "readmeFilename": "README.md"
