Add main in package.json
Usefull for managing dependencies in gulp with main-bower-file.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Client side of SocketCluster",
   "version": "1.3.13",
   "homepage": "http://socketcluster.io",
+  "main": "socketcluster.js",
   "contributors": [
     {
       "name": "Jonathan Gros-Dubois",
