--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "socketcluster-client",
   "description": "SocketCluster JavaScript client",
-  "version": "3.1.1",
+  "version": "4.0.0",
   "homepage": "http://socketcluster.io",
   "contributors": [
     {
@@ -17,6 +17,7 @@
     "linked-list": "0.1.0",
     "sc-channel": "1.0.x",
     "sc-emitter": "1.0.x",
+    "sc-errors": "1.0.x",
     "sc-formatter": "1.0.x",
     "sc-ws": "0.8.0"
   },
