--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "linked-list": "0.1.0",
     "sc-channel": "1.0.x",
     "sc-emitter": "1.0.x",
+    "sc-errors": "1.0.x",
     "sc-formatter": "1.0.x",
     "sc-ws": "0.8.0"
   },
