--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lodash.clonedeep": "4.5.0",
     "querystring": "0.2.0",
     "sc-channel": "1.0.x",
-    "sc-emitter": "1.0.x",
+    "sc-emitter": "1.x.x",
     "sc-errors": "1.0.x",
     "sc-formatter": "3.0.x",
     "ws": "1.1.1"
