add build script and dev dependencies

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "type": "git",
     "url": "git://github.com/SocketCluster/socketcluster-client.git"
   },
+  "scripts": {
+    "build": "browserify -s socketCluster index.js > socketcluster.js; uglifyjs socketcluster.js -o socketcluster.min.js"
+  },
   "dependencies": {
     "base-64": "0.1.0",
     "linked-list": "0.1.0",
@@ -28,5 +31,9 @@
     "ws": "./lib/ws-browser.js"
   },
   "readmeFilename": "README.md",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "browserify": "^13.3.0",
+    "uglify-js": "^2.7.5"
+  }
 }
