--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "socketcluster-client",
   "description": "SocketCluster JavaScript client",
-  "version": "5.3.1",
+  "version": "5.4.0",
   "homepage": "http://socketcluster.io",
   "contributors": [
     {
@@ -19,7 +19,7 @@
   "dependencies": {
     "base-64": "0.1.0",
     "linked-list": "0.1.0",
-    "clone": "2.1.x",
+    "clone": "2.1.1",
     "querystring": "0.2.0",
     "sc-channel": "1.0.x",
     "sc-emitter": "1.x.x",
