--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "socketcluster-client",
   "description": "SocketCluster JavaScript client",
-  "version": "6.3.0",
+  "version": "6.4.0",
   "homepage": "http://socketcluster.io",
   "contributors": [
     {
@@ -18,14 +18,14 @@
   },
   "dependencies": {
     "base-64": "0.1.0",
-    "linked-list": "0.1.0",
     "clone": "2.1.1",
+    "component-emitter": "1.2.1",
+    "linked-list": "0.1.0",
     "querystring": "0.2.0",
-    "sc-channel": "~1.0.6",
-    "sc-emitter": "~1.1.0",
+    "sc-channel": "~1.1.0",
     "sc-errors": "~1.3.3",
     "sc-formatter": "~3.0.0",
-    "ws": "3.0.0"
+    "ws": "3.1.0"
   },
   "browser": {
     "ws": "./lib/ws-browser.js"
@@ -34,6 +34,6 @@
   "license": "MIT",
   "devDependencies": {
     "browserify": "^13.3.0",
-    "uglify-js": "^2.7.5"
+    "uglify-js": "^2.8.29"
   }
 }
