--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "socketcluster-client",
   "description": "SocketCluster JavaScript client",
-  "version": "7.0.2",
+  "version": "8.0.0",
   "homepage": "http://socketcluster.io",
   "contributors": [
     {
@@ -14,7 +14,7 @@
     "url": "git://github.com/SocketCluster/socketcluster-client.git"
   },
   "scripts": {
-    "build": "browserify -s socketCluster index.js > socketcluster.js; uglifyjs socketcluster.js -o socketcluster.min.js",
+    "build": "gulp browserify; gulp minify",
     "test": "mocha --reporter spec --timeout 3000 --slow 3000"
   },
   "dependencies": {
@@ -40,6 +40,7 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.2",
     "gulp-cli": "^1.3.0",
+    "gulp-convert-newline": "^0.0.3",
     "gulp-derequire": "^2.1.0",
     "gulp-insert": "^0.5.0",
     "gulp-rename": "^1.2.2",
