--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "git://github.com/SocketCluster/socketcluster-client.git"
   },
   "scripts": {
+    "lint": "eslint --ext .js --ignore-path .gitignore .",
     "build": "gulp browserify; gulp minify",
     "test": "mocha --reporter spec --timeout 3000 --slow 3000"
   },
@@ -37,11 +38,18 @@
     "babel-plugin-minify-dead-code-elimination": "0.1.4",
     "babel-runtime": "^6.26.0",
     "browserify": "^14.3.0",
+    "eslint": "^3.13.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.2",
     "gulp-cli": "^1.3.0",
     "gulp-convert-newline": "^0.0.3",
     "gulp-derequire": "^2.1.0",
+    "gulp-eslint": "^4.0.0",
     "gulp-insert": "^0.5.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.1.2",
