--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sc-channel": "~1.2.0",
     "sc-errors": "~1.3.3",
     "sc-formatter": "~3.0.1",
+    "uuid": "3.1.0",
     "ws": "3.3.3"
   },
   "browser": {
