--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "component-emitter": "1.2.1",
     "linked-list": "0.1.0",
     "querystring": "0.2.0",
-    "sc-channel": "~1.2.0",
-    "sc-errors": "~1.3.3",
-    "sc-formatter": "~3.0.1",
+    "sc-channel": "^1.2.0",
+    "sc-errors": "^1.4.0",
+    "sc-formatter": "^3.0.1",
     "uuid": "3.1.0",
     "ws": "3.3.3"
   },
