--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
     "test": "mocha --reporter spec --timeout 3000 --slow 3000"
   },
   "dependencies": {
+    "async-stream-emitter": "^1.1.0",
     "base-64": "0.1.0",
     "clone": "2.1.1",
-    "component-emitter": "1.2.1",
     "linked-list": "0.1.0",
     "querystring": "0.2.0",
-    "sc-channel": "^1.2.0",
-    "sc-errors": "^1.4.1",
-    "sc-formatter": "^3.0.1",
+    "sc-channel": "^2.0.0",
+    "sc-errors": "^2.0.0",
+    "sc-formatter": "^3.0.2",
+    "stream-demux": "^4.0.4",
     "uuid": "3.2.1",
-    "ws": "5.1.1"
+    "ws": "6.1.2"
   },
   "browser": {
     "ws": "./lib/ws-browser.js"
@@ -35,10 +36,12 @@
   "readmeFilename": "README.md",
   "license": "MIT",
   "devDependencies": {
-    "babel-plugin-minify-dead-code-elimination": "0.4.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "babel-plugin-minify-dead-code-elimination": "^0.5.0",
     "browserify": "^16.2.2",
     "gulp": "^4.0.0",
-    "gulp-babel": "^6.1.2",
+    "gulp-babel": "^8.0.0",
     "gulp-cli": "^2.0.1",
     "gulp-convert-newline": "^0.0.3",
     "gulp-insert": "^0.5.0",
