--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asyngular-client",
-  "description": "SocketCluster JavaScript client",
+  "description": "Asyngular JavaScript client",
   "version": "1.0.2",
   "homepage": "http://socketcluster.io",
   "contributors": [
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
+    "asyngular-server": "^1.0.1",
     "babel-plugin-minify-dead-code-elimination": "^0.5.0",
     "browserify": "^16.2.2",
     "gulp": "^4.0.0",
@@ -49,7 +50,6 @@
     "gulp-uglify": "^3.0.1",
     "localStorage": "^1.0.3",
     "mocha": "5.2.0",
-    "asyngular-server": "^1.0.0",
     "uglify-es": "^3.3.9",
     "vinyl-source-stream": "^2.0.0"
   }
