--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "asyngular-client",
   "description": "Asyngular JavaScript client",
-  "version": "5.3.2",
+  "version": "5.3.3",
   "homepage": "http://socketcluster.io",
   "contributors": [
     {
@@ -21,7 +21,7 @@
     "ag-channel": "^4.0.2",
     "ag-request": "^1.0.0",
     "async-stream-emitter": "^3.0.2",
-    "base-64": "^0.1.0",
+    "buffer": "^5.2.1",
     "linked-list": "^0.1.0",
     "lodash.clonedeep": "^4.5.0",
     "querystring": "^0.2.0",
