--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "asyngular-client",
   "description": "Asyngular JavaScript client",
   "version": "5.4.1",
-  "homepage": "http://socketcluster.io",
+  "homepage": "https://asyngular.io/",
   "contributors": [
     {
       "name": "Jonathan Gros-Dubois",
