Use clone-deep instead of lodash

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "ag-request": "^1.0.0",
     "async-stream-emitter": "^3.0.2",
     "buffer": "^5.2.1",
+    "clone-deep": "^4.0.1",
     "linked-list": "^0.1.0",
-    "lodash.clonedeep": "^4.5.0",
     "querystring": "^0.2.0",
     "sc-errors": "^2.0.1",
     "sc-formatter": "^3.0.2",
