--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "socketcluster-client",
   "description": "SocketCluster JavaScript client",
-  "version": "16.0.4",
+  "version": "16.0.5",
   "homepage": "https://socketcluster.io/",
   "contributors": [
     {
@@ -30,11 +30,11 @@
     "buffer": "^5.2.1",
     "clone-deep": "^4.0.1",
     "linked-list": "^0.1.0",
-    "querystring": "^0.2.0",
     "sc-errors": "^2.0.1",
     "sc-formatter": "^3.0.2",
     "stream-demux": "^8.0.0",
-    "uuid": "^3.2.1",
+    "uuid": "^8.3.2",
+    "vinyl-buffer": "^1.0.1",
     "ws": "^7.4.6"
   },
   "browser": {
@@ -46,15 +46,15 @@
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "babel-plugin-minify-dead-code-elimination": "^0.5.0",
-    "browserify": "^16.2.3",
+    "browserify": "^17.0.0",
     "es-check": "^5.2.3",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-cli": "^2.3.0",
     "gulp-convert-newline": "^0.0.3",
     "gulp-insert": "^0.5.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-uglify": "^3.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-uglify": "^3.0.2",
     "localStorage": "^1.0.3",
     "mocha": "^9.0.0",
     "socketcluster-server": "^16.0.0",
