--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "socketcluster-client",
   "description": "SocketCluster JavaScript client",
-  "version": "17.2.2",
+  "version": "18.0.0",
   "homepage": "https://socketcluster.io/",
   "contributors": [
     {
@@ -14,7 +14,7 @@
     "url": "git://github.com/SocketCluster/socketcluster-client.git"
   },
   "scripts": {
-    "build": "gulp browserify; gulp minify",
+    "build": "./node_modules/.bin/rollup --config ./rollup.config.js",
     "test": "mocha --reporter spec --timeout 5000 --slow 5000"
   },
   "keywords": [
@@ -43,22 +43,12 @@
   "readmeFilename": "README.md",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "babel-plugin-minify-dead-code-elimination": "^0.5.0",
-    "browserify": "^17.0.0",
-    "es-check": "^5.2.3",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-cli": "^2.3.0",
-    "gulp-convert-newline": "^0.0.3",
-    "gulp-insert": "^0.5.0",
-    "gulp-rename": "^2.0.0",
-    "gulp-uglify": "^3.0.2",
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-terser": "^0.4.3",
     "localStorage": "^1.0.3",
-    "mocha": "^9.0.0",
-    "socketcluster-server": "^17.4.1",
-    "uglify-es": "^3.3.9",
-    "vinyl-source-stream": "^2.0.0"
+    "mocha": "^10.2.0",
+    "rollup": "^3.28.1",
+    "socketcluster-server": "^17.4.1"
   }
 }
