--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   "dependencies": {
     "ag-channel": "^5.0.0",
     "ag-request": "^1.0.1",
-    "async-stream-emitter": "^6.0.1",
+    "async-stream-emitter": "^7.0.0",
     "buffer": "^5.2.1",
     "clone-deep": "^4.0.1",
     "linked-list": "^2.1.0",
     "sc-errors": "^2.0.3",
     "sc-formatter": "^4.0.0",
-    "stream-demux": "^9.0.2",
+    "stream-demux": "^10.0.0",
     "uuid": "^8.3.2",
     "vinyl-buffer": "^1.0.1",
     "ws": "^8.9.0"
@@ -49,6 +49,6 @@
     "localStorage": "^1.0.3",
     "mocha": "^10.2.0",
     "rollup": "^3.28.1",
-    "socketcluster-server": "^18.1.2"
+    "socketcluster-server": "18.x.x"
   }
 }
